Bug 24949: Provide password visibility toggle / icon to unmask password on staff login screen
This patch adapts the work on Bug 34778 to the staff client, adding a
"Show password" checkbox to the login form.

To test, apply the batch and go to the staff client login screen.

- You should see a "Show password" checkbox under the password field.
- Type something in the password field. It should be masked (****).
- Click the "Show password" label or check the checkbox.
- The password field should now show the text you entered.
- Confirm that you can log in successfully whether or not the password
  is visible.
- `prove t/db_dependent/selenium/authentication.t` should pass.

Sponsored-by: Athens County Public Libraries
(cherry picked from commit 899e4001e8c2d0f4ec51c14d0d01c42086efa308)

--- a/koha-tmpl/intranet-tmpl/prog/css/login.css
+++ b/koha-tmpl/intranet-tmpl/prog/css/login.css
@@ -158,3 +158,12 @@ input[type="password"] {
     font-size: 1.7em;
     width: 97%;
 }
+
+.show-password-toggle {
+    margin: .7rem 0;
+}
+
+input.show-password-toggle-checkbox {
+    float: left;
+    margin: 0 .5rem 0 0;
+}
